카카오 지도 키워드 검색, 목록 표기

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=647c93581c06a76215fffb6f5c2db212&libraries=services,clusterer,drawing"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
