login, lgout 완료, 데이트 기록시 유저 couple_id 추가

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=647c93581c06a76215fffb6f5c2db212&libraries=services,clusterer,drawing"
