--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,13 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, user-scalable=no"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"
+    />
+    <meta name="viewport" content="user-scalable=0;" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta
+      content="minimum-scale=1.0, width=device-width, maximum-scale=1, user-scalable=no"
+      name="viewport"
     />
 
     <meta name="theme-color" content="#000000" />
